--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html{
 background-image:url("cover1.jpg");
 background-position: center;
 background-size:cover;
-background-repeat:no-repeat;
+background-repeat:repeat;
 
 }
 
