--- a/parallax.css
+++ b/parallax.css
@@ -246,7 +246,7 @@ justify-content:space-between;
 }
 .pic{
 
-background-image:url("art.jpg");
+background:radial-gradient(circle, rgba(233,199,193,1) 0%, rgba(80,55,72,1) 100%);
  background-blend-mode: lighten;
 background-repeat:no-repeat;
 background-size:cover;
